# 3-party-fixed-and-floating-point

./: .gitignore  CMakeLists.txt  README.md  network_simulation.sh  run_multiparty_test.sh  setup_env_and_build.sh
src/config/: config.h
src/protocol/: addictive_share.h  addictive_share.tpp  addictive_share_p.h  addictive_share_p.tpp  align.h  align.tpp  convert.h  convert.tpp  detect.cpp  detect.h  detect.tpp  eq.h  eq.tpp  fixed-point.h  fixed_point.h  fixed_point.tpp  floating_point.h  floating_point_add.h  floating_point_add.tpp  floating_point_mult.h  floating_point_mult.tpp  great.h  great.tpp  masked_RSS.h  masked_RSS.tpp  masked_RSS_p.h  masked_RSS_p.tpp  select.h  select.tpp  shift.h  shift.tpp  sign.h  sign.tpp  trunc.h  trunc.tpp  wrap.h  wrap.tpp
src/test/: MSS_add_test.cpp  MSS_basic_test.cpp  addictive_share_test.cpp  align_test.cpp  convert_test.cpp  detect_test.cpp  eq_test.cpp  fixed_point_plain_mul_test.cpp  fixed_point_test.cpp  floating_point_add_test.cpp  floating_point_mult_test.cpp  great_test.cpp  net_io_channel_test.cpp  prefix_test.cpp  prg_test.cpp  select_test.cpp  shift_test.cpp  sign_test.cpp  speed_SOTA_test.cpp  speed_fixed_mult_SOTA_test.cpp  speed_fixed_mult_test.cpp  speed_floating_add_test.cpp  speed_floating_mult_test.cpp  trunc_test.cpp  wrap_test.cpp
src/test/speed_test_inl/: after_compute.inl  after_preprocess.inl  before_compute.inl  before_preprocess.inl  setup.inl  show_results.inl
src/utils/: logs.h  misc.h  multi_party_net_io.h  permutation.h  prg_sync.h
